--- a/src/components/home/CallToAction.scss
+++ b/src/components/home/CallToAction.scss
@@ -1,19 +1,50 @@
 // src/styles/CallToAction.scss
 @import '../../styles/variables';
+@import "../../styles/App.scss";
 
+@import '../../styles/variables';
 
 .cta {
-    padding: 4rem 2rem;
-    background-color: $primary-color;
-    color: white;
-    text-align: center;
-  
-    h2 {
-      font-size: 2.5rem;
-      margin-bottom: 1.5rem;
-      color: white;
+  padding: 4rem 2rem;
+  background-color: $primary-color;
+  color: white;
+  text-align: center;
+
+  .container {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 20px;
+
+    @include tablet {
+      padding: 0 15px;
     }
-  
+
+    @include mobile {
+      padding: 0 10px;
+    }
+  }
+
+  h2 {
+    font-size: 2.5rem;
+    margin-bottom: 1.5rem;
+    color: white;
+
+    @include tablet {
+      font-size: 2rem;
+    }
+
+    @include mobile {
+      font-size: 1.8rem;
+    }
+
+    @include phones {
+      font-size: 1.6rem;
+    }
+  }
+
+  .buttons {
+    margin-bottom: 3rem;
+
     button {
       padding: 10px 20px;
       font-size: 1.2rem;
@@ -24,11 +55,74 @@
       cursor: pointer;
       margin: 0 10px;
       transition: background-color 0.3s ease;
-  
+
       &:hover {
         background-color: darken($accent-color, 10%);
+      }
+
+      @include tablet {
+        font-size: 1.1rem;
+        margin: 0 8px;
+      }
+
+      @include mobile {
+        font-size: 1rem;
+        margin: 0 5px;
+      }
+
+      @include phones {
+        font-size: 0.9rem;
+        margin: 0 3px;
       }
     }
   }
 
-  
+  .metrics {
+    display: flex;
+    justify-content: space-around;
+
+    @include mobile {
+      flex-direction: column;
+      align-items: center;
+    }
+
+    .metric {
+      text-align: center;
+
+      h3 {
+        font-size: 2.5rem;
+        margin-bottom: 0.5rem;
+        color: $accent-color;
+
+        @include tablet {
+          font-size: 2rem;
+        }
+
+        @include mobile {
+          font-size: 1.8rem;
+        }
+
+        @include phones {
+          font-size: 1.6rem;
+        }
+      }
+
+      p {
+        font-size: 1.2rem;
+
+        @include tablet {
+          font-size: 1.1rem;
+        }
+
+        @include mobile {
+          font-size: 1rem;
+        }
+
+        @include phones {
+          font-size: 0.9rem;
+        }
+      }
+    }
+  }
+}
+
