--- a/src/components/home/MissionStatement.scss
+++ b/src/components/home/MissionStatement.scss
@@ -1,25 +1,110 @@
 // src/styles/MissionStatement.scss
 @import '../../styles/variables';
+@import "../../styles//App.scss";
 
+.mission-statement {
+  background-color: $background-light;
+  padding: 4rem 0;
+  color: $text-color;
 
-.mission {
-    padding: 4rem 2rem;
-    background-color: $background-light;
-    text-align: center;
-  
-    h2 {
-      font-size: 2.5rem;
-      margin-bottom: 1.5rem;
-      color: $primary-color;
+  .container {
+    max-width: 1200px; // Adjusted for better alignment on large screens
+    margin: 0 auto;
+    padding: 0 20px;
+
+    @include tablet {
+      padding: 0 15px;
     }
-  
-    p {
-      font-size: 1.2rem;
-      color: $text-color;
-      line-height: 1.6;
-      max-width: 800px;
-      margin: 0 auto;
+
+    @include mobile {
+      padding: 0 10px;
+    }
+
+    @include phones {
+      padding: 0 5px;
     }
   }
 
-  
+  h2 {
+    font-size: 2.5rem;
+    color: $primary-color;
+    margin-bottom: 2rem;
+
+    @include desktop {
+      font-size: 2.2rem;
+    }
+
+    @include tablet {
+      font-size: 2rem;
+    }
+
+    @include mobile {
+      font-size: 1.8rem;
+    }
+
+    @include phones {
+      font-size: 1.6rem;
+    }
+  }
+
+  p {
+    font-size: 1.2rem;
+    line-height: 1.8;
+    margin-bottom: 1.5rem;
+
+    @include desktop {
+      font-size: 1.15rem;
+    }
+
+    @include tablet {
+      font-size: 1.1rem;
+    }
+
+    @include mobile {
+      font-size: 1rem;
+    }
+
+    @include phones {
+      font-size: 0.95rem;
+    }
+  }
+
+  ul {
+    list-style-type: disc;
+    margin-left: 1.5rem;
+    text-align: left;
+
+    @include tablet {
+      margin-left: 1rem;
+    }
+
+    @include mobile {
+      margin-left: 0.5rem;
+    }
+
+    @include phones {
+      margin-left: 0.25rem;
+    }
+
+    li {
+      font-size: 1.2rem;
+      margin-bottom: 1rem;
+
+      @include desktop {
+        font-size: 1.15rem;
+      }
+
+      @include tablet {
+        font-size: 1.1rem;
+      }
+
+      @include mobile {
+        font-size: 1rem;
+      }
+
+      @include phones {
+        font-size: 0.95rem;
+      }
+    }
+  }
+}
