--- a/src/styles/Navbar.scss
+++ b/src/styles/Navbar.scss
@@ -1,34 +1,56 @@
-@import './variables';
+@import "./variables";
 
 .navbar {
   background-color: $primary-color;
   padding: 1rem;
   display: flex;
-  justify-content: space-between;
-  align-items: center;
-  position: fixed; /* Make the navbar sticky */
-  top: 0; /* Stick to the top */
-  width: 100%; /* Full width */
-  z-index: 1000; /* Ensure it is above other content */
-  transition: background-color 0.3s ease; /* Smooth transition for background change on scroll */
+  justify-content: center;
+  align-items: center; /* Vertically center the items */
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 1000;
+  transition: background-color 0.3s ease;
 
-  &__logo h2 {
-    color: #00BFA5; /* Initial color */
-    transition: color 0.3s ease; /* Smooth transition for color change on scroll */
+  &__header {
+    display: flex;
+    justify-content: center; /* Center horizontally */
+    align-items: center; /* Vertically center the logo and toggle button */
+    flex: 1; /* Allow the header to take up equal space as the links */
+  }
 
-    span {
-      color: #fff; /* Initial color */
-      transition: color 0.3s ease; /* Smooth transition for color change on scroll */
+  &__logo {
+    h2 {
+      color: $secondary-color;
+      transition: color 0.3s ease;
+
+      span {
+        color: $secondary-color;
+        transition: color 0.3s ease;
+      }
+
+      &:hover {
+        color: $accent-color;
+        span {
+          color: $accent-color;
+        }
+      }
     }
   }
 
   &__links {
     list-style: none;
     display: flex;
+    flex-direction: row;
+    align-items: center; /* Vertically center the links */
+    gap: 5px;
+    justify-content: space-around;
+    flex: 2; /* Take up more space compared to the header */
     margin: 0;
+    padding: 0;
 
     li {
-      margin-left: 20px;
+      margin-left: 2px;
 
       a {
         color: white;
@@ -43,8 +65,7 @@
   }
 
   &__toggle {
-    display: none;
-    background-color: $primary-color;
+    background-color: transparent;
     border: none;
     font-size: 24px;
     color: white;
@@ -52,48 +73,71 @@
     cursor: pointer;
 
     &:hover {
-      color: white;
+      color: $accent-color;
     }
   }
 
-  &.open .navbar__links {
-    display: flex;
-    flex-direction: column;
-    position: absolute;
-    top: 100%;
-    left: 0;
-    right: 0;
-    background-color: $primary-color;
-    padding: 1rem 0;
+  @media (max-width: 960px) {
+    .navbar__links {
+      font-size: 14px;
+    }
+  }
 
-    li {
-      margin: 10px 0;
+  /* Mobile View */
+  @media (max-width: 768px) {
+    flex-direction: column; /* Change navbar flex direction to column when open */
+
+    &__header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      width: 100%;
+    }
+
+    //&__logo,
+    &__toggle {
+      display: flex;
+      justify-content: space-between; /* Align logo and toggle */
+      //width: 100%; /* Take full width */
+    }
+
+    &__links {
+      display: none; /* Hide links by default */
+
+      li {
+        margin: 0.5rem 0;
+
+        a {
+          font-size: 18px;
+        }
+      }
+    }
+
+    &__links--open {
+      display: flex;
+      flex-direction: column;
+      width: 100%;
+      text-align: center;
+    }
+
+    &__toggle {
+      display: block;
+    }
+  }
+
+  /* Larger Screens */
+  @media (min-width: 769px) {
+    flex-direction: row; /* Normal row direction on larger screens */
+
+    &__links {
+      display: flex;
+      flex-direction: row;
+    }
+
+    &__toggle {
+      display: none; /* Hide the toggle button on larger screens */
     }
   }
 }
 
-@media (max-width: 768px) {
-  .navbar__links {
-    display: none;
-    flex-direction: column;
-    width: 100%;
-    text-align: center;
-  }
 
-  .navbar__toggle {
-    display: block;
-  }
-}
-
-/* Add a class for when the user scrolls down */
-.navbar.scrolled {
-  background-color: $secondary-color;
-
-  &__logo h2 {
-    color: $primary-color; /* Change the color to primary color on scroll */
-
-    span {
-      color: $primary-color; /* Change the color of span to primary color on scroll */
-    }
-  }
-}
