--- a/src/components/home/CallToAction.scss
+++ b/src/components/home/CallToAction.scss
@@ -2,8 +2,6 @@
 @import '../../styles/variables';
 @import "../../styles/App.scss";
 
-@import '../../styles/variables';
-
 .cta {
   padding: 4rem 2rem;
   background-color: $primary-color;
@@ -44,12 +42,15 @@
 
   .buttons {
     margin-bottom: 3rem;
+    display: flex;
+    flex-wrap: wrap; /* Add flexibility for smaller screens */
+    justify-content: center; /* Center align buttons on mobile */
 
     a {
       padding: 10px 20px;
       font-size: 1.2rem;
       background-color: $accent-color;
-      color: white;
+      color: black;
       border: none;
       border-radius: 5px;
       text-decoration: none;
@@ -68,12 +69,14 @@
 
       @include mobile {
         font-size: 1rem;
-        margin: 0 5px;
+        margin: 10px 5px; /* Increase vertical margin for better spacing */
+        padding: 8px 16px; /* Reduce padding to fit smaller screens */
       }
 
       @include phones {
         font-size: 0.9rem;
-        margin: 0 3px;
+        margin: 8px 3px;
+        padding: 6px 14px; /* Further reduce padding for extra small screens */
       }
     }
   }
