--- a/src/styles/Footer.scss
+++ b/src/styles/Footer.scss
@@ -24,6 +24,11 @@
       color: $accent-color;
     }
   }
+
+  .tdwonder {
+    color: #00E5FF;
+    font-size: 16px;
+  }
 }
 
 @media (max-width: 768px) {
