--- a/src/components/about/Activities.scss
+++ b/src/components/about/Activities.scss
@@ -1,14 +1,22 @@
 @import "../../styles/variables";
 @import "../../styles/App.scss";
 
-.our-story {
-  padding: 2rem 0;
+.objectives {
+  padding: 2rem 1rem;
   background-color: $background-light;
 
   h2 {
     color: $primary-color;
     margin-bottom: 1.5rem;
     font-size: 2rem; // Default for larger screens
+
+    @media (max-width: 768px) {
+      font-size: 1.5rem; // Adjust for tablets
+    }
+
+    @media (max-width: 480px) {
+      font-size: 1.25rem; // Adjust for mobile
+    }
   }
 
   p {
@@ -16,33 +24,14 @@
     line-height: 1.8;
     margin-bottom: 1rem;
     font-size: 1rem; // Default for larger screens
-  }
 
-  // Tablet
-  @media (max-width: 768px) {
-    padding: 1.5rem 0;
-
-    h2 {
-      font-size: 1.75rem;
+    @media (max-width: 768px) {
+      font-size: 0.9rem; // Adjust for tablets
     }
 
-    p {
-      font-size: 0.95rem;
+    @media (max-width: 480px) {
+      font-size: 0.8rem; // Adjust for mobile
     }
   }
 
-  // Mobile
-  @media (max-width: 480px) {
-    padding: 1rem 0;
-
-    h2 {
-      font-size: 1.5rem;
-      margin-bottom: 1rem;
-    }
-
-    p {
-      font-size: 0.9rem;
-    }
-  }
 }
-
