--- a/src/components/about/Partners.scss
+++ b/src/components/about/Partners.scss
@@ -15,11 +15,13 @@
     grid-template-columns: 1fr;
     gap: 2rem;
 
-    @include tablet {
+    /* Media query for tablet */
+    @media screen and (min-width: 768px) {
       grid-template-columns: repeat(2, 1fr);
     }
 
-    @include desktop {
+    /* Media query for desktop */
+    @media screen and (min-width: 1024px) {
       grid-template-columns: repeat(4, 1fr);
     }
 
@@ -44,3 +46,5 @@
     }
   }
 }
+
+
