--- a/src/components/home/HeroSection.scss
+++ b/src/components/home/HeroSection.scss
@@ -1,5 +1,4 @@
-// src/styles/HeroSection.scss
-@import '../../styles/variables';
+@import "../../styles/variables";
 
 .hero {
   position: relative;
@@ -37,7 +36,6 @@
       bottom: 0;
       display: flex;
       flex-direction: column;
-      //justify-content: center;
       align-items: center;
       background-color: rgba(0, 0, 0, 0.5);
       color: white;
@@ -76,7 +74,7 @@
   .slick-prev,
   .slick-next {
     font-size: 2rem;
-    color: #FF6F00;
+    color: #ff6f00;
     z-index: 10;
     top: 50%;
     transform: translateY(-50%);
@@ -109,6 +107,98 @@
 
     li.slick-active button:before {
       color: $accent-color;
+    }
+  }
+}
+
+/* Media queries for responsiveness */
+
+/* Large screens (desktops, laptops) */
+@media (max-width: 1200px) {
+  .hero {
+    .overlay {
+      padding: 300px 20px 50px 20px !important;
+
+      h1 {
+        font-size: 2.5rem;
+      }
+
+      p {
+        font-size: 1.2rem;
+      }
+
+      button {
+        font-size: 1rem;
+      }
+    }
+  }
+}
+
+/* Medium screens (tablets) */
+@media (max-width: 768px) {
+  .hero {
+    .overlay {
+      padding:  200px 20px 50px 20px !important;
+
+      h1 {
+        font-size: 1.5rem;
+      }
+
+      p {
+        font-size: 1rem;
+      }
+
+      button {
+        font-size: 0.9rem;
+        padding: 8px 16px;
+      }
+    }
+
+    .slick-prev,
+    .slick-next {
+      font-size: 1.5rem;
+      height: 50px;
+      width: 50px;
+    }
+  }
+}
+
+
+/* Small screens (phones) */
+@media (max-width: 576px) {
+  .hero {
+    .slick-slide {
+      height: 100vh; // Ensure full height alignment
+
+      img {
+        width: 100%; 
+        height: 100vh; // Align image height to the slick-slide height
+        object-fit: cover; // Cover ensures that the image fills the height proportionally
+      }
+
+      .overlay {
+        padding: 200px 10px 30px 10px !important;
+
+        h1 {
+          font-size: 1.5rem;
+        }
+
+        p {
+          font-size: 1rem;
+        }
+
+        button {
+          font-size: 0.8rem;
+          padding: 6px 12px;
+        }
+      }
+
+      .slick-prev,
+      .slick-next {
+        font-size: 1rem;
+        height: 40px;
+        width: 40px;
+      }
     }
   }
 }
