--- a/src/components/projects/Current.scss
+++ b/src/components/projects/Current.scss
@@ -1,4 +1,4 @@
-@import "../../styles/variables";
+@import "../../styles/variables"; 
 @import "../../styles/App.scss";
 
 .current-projects {
@@ -9,21 +9,66 @@
   
   .project {
     margin-bottom: 1.5rem;
-    
+
     h3 {
       color: $secondary-color;
     }
-    
+
     p {
       font-size: 1rem;
       color: $text-color;
       margin: 0.5rem 0;
-      
+
       strong {
         color: $accent-color;
       }
     }
   }
+
+  // Media Queries for responsiveness
+  @media screen and (max-width: 1200px) {
+    .project {
+      margin-bottom: 1.2rem;
+
+      p {
+        font-size: 0.95rem; // Slightly reduce the text size
+      }
+    }
+  }
+
+  @media screen and (max-width: 768px) {
+    h2 {
+      font-size: 1.5rem; // Adjust heading size for smaller screens
+    }
+
+    .project {
+      margin-bottom: 1rem;
+
+      h3 {
+        font-size: 1.25rem; // Adjust the subheading size for tablets
+      }
+
+      p {
+        font-size: 0.9rem; // Further reduce text size
+      }
+    }
+  }
+
+  @media screen and (max-width: 480px) {
+    h2 {
+      font-size: 1.25rem; // Adjust heading size for mobile
+    }
+
+    .project {
+      margin-bottom: 0.8rem;
+
+      h3 {
+        font-size: 1.1rem; // Adjust subheading size for mobile
+      }
+
+      p {
+        font-size: 0.85rem; // Further reduce text size for mobile
+      }
+    }
+  }
 }
-
-
