--- a/src/styles/News.scss
+++ b/src/styles/News.scss
@@ -4,8 +4,10 @@
 // src/styles/News.scss
 
 .news-page {
+  margin-top: 8rem!important;
+
     .blog-section, .media-gallery-section {
-      margin: 6rem 0;
+      margin: 6rem 0!important;
   
       h2 {
         font-size: 2rem;
